edxMITpractice/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.8.2.jar:/home/tibor/repos/java/libraries/commons-lang3-3.4.jar:/home/tibor/repos/java/libraries/commons-lang3-3.4-javadoc.jar:/home/tibor/repos/java/libraries/junit-4.12.jar:/home/tibor/repos/java/libraries/hamcrest-core-1.3.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-service.jar:/home/tibor/repos/java/edxMITpractice
-d
/home/tibor/repos/java/edxMITpractice/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/usr/share/bluej/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/home/tibor/repos/java/edxMITpractice/ps3/BigLibrary.java
<---- end of javadoc command ---->
Loading source file /home/tibor/repos/java/edxMITpractice/ps3/BigLibrary.java...
/home/tibor/repos/java/edxMITpractice/ps3/BigLibrary.java:135: error: illegal start of expression
        Set<Book> checkedOutKeys = ;
                                   ^
1 error
